Add new Unity extension for vscode + remove unwanted ones

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
   "recommendations": [
-    "unity.unity-debug",
     "kleber-swf.unity-code-snippets",
-    "yclepticstudios.unity-snippets"
+    "yclepticstudios.unity-snippets",
+    "visualstudiotoolsforunity.vstuc"
   ]
 }
